# XOR-FileEncryptor

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: constants.h  main.c
src/Cli/: argHandlers.c  argHandlers.h  arg_handlers.c  arg_handlers.h  args.c
src/Encryptors/: xor_encryptor.c  xor_encryptor.h  xorencryptor.h
src/cli/: arg_flags.h  arg_handlers.c  arg_handlers.h  args.c  args.h
src/encryptors/: xor_encryptor.c  xor_encryptor.h  xorencryptor.c
